iptables/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -m comment --comment LOOPBACK -j ACCEPT
-A INPUT -d 127.0.0.0/8 -i ens4 -m comment --comment "NO FAKE LOCALHOST" -j DROP
-A INPUT -i ens4 -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m comment --comment "NEW TCP BUT NOT SYN" -j DROP

-A INPUT -i ens4 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -m comment --comment "HTTPS RESPONSES" -j ACCEPT
-A INPUT -i ens4 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -m comment --comment "HTTP RESPONSES" -j ACCEPT

-A INPUT -i ens4 -p tcp -m multiport --sports 22,35079 -m state --state ESTABLISHED -m comment --comment "SSH CLIENT" -j ACCEPT
-A INPUT -i ens4 -p tcp -m tcp --dport 22 -m comment --comment "SSH SERVER" -j ACCEPT

-A INPUT -i ens4 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -m comment --comment "DNS RESPONSES" -j ACCEPT
-A INPUT -i ens4 -p udp -m udp --sport 53 -m state --state ESTABLISHED -m comment --comment "DNS RESPONSES" -j ACCEPT

-A INPUT -d 10.0.0.10 -i ens4 -p tcp -m tcp --dport 68 -m comment --comment "systemd-network LOCAL" -j ACCEPT

-A INPUT -i ens4 -p tcp -m tcp --dport 2727 -m comment --comment "MINECRAFT SERVER" -j ACCEPT

COMMIT
